          string length(string ID)
          replace char(string ID, position, ascii)
          delete char(string ID, position)
          ascii from string(string ID, position)
          string to globals(string ID, starting global, length)
          globals to string(string ID, starting global, length)
        [BIG HUGE thanks to Yuriy (Draknight2@wmconnect.com)]

      * Commands to get useful strings:
          get hero name(string, hero)
          set hero name(string, hero)
          get item name(string, item)
          get map name(string, map)
          get attack name(string, attack)
          get global string(string, global)
          input string (string, use current)
        [Mike Caron]

      * Commands to display strings on the screen:
          show string at (string, x, y)
          center string at (string, x, y)
          hide string (string)
          string style (string, style)
          string color (string, color, background color)
          position string (string, x, y)
          string X (string)
          string Y (string)
        [James Paige]

       * ${S#} Meta String for textboxes

       * Support in HSpeak for "auto strings":

          $1="My string"

          That will set the string with ID 1 to "My string"

    *  get enemy name, set enemy name
       get enemy stat, set enemy stat
       get enemy appearance, set enemy appearance
       get enemy rewards, set enemy rewards
	             [Mike Caron and Yuriy]

    *  Map limit increased from 100 to 32767 maps
       [Ralph Versteegen]

    *  Transparent tile and sprite pasting in all graphics editors.
       Copy a sprite normally, then paste it with Ctrl + T. Transparent
       (colour 0) areas will not get pasted [Ralph Versteegen]

    *  Place tiles without overwriting passability with the default by 
       hitting Ctrl + D when tilemapping [Ralph Versteegen]

    *  Attack bitset to ignore attacking hero's/enemy's Extra Hits
       stat [Ralph Versteegen]
